<resources>
    <string name="app_name" translatable="false">Exercícios PDM</string>
    <string name="initial_value">Initial Value</string>
    <string name="initial_value2">Value in USD</string>
    <string name="monthly_application2">Value in USD</string>
    <string name="monthly_application">Monthly Payment</string>
    <string name="instalment">Instalment</string>
    <string name="instalment2">Number of Months</string>
    <string name="taxes">Rate</string>
    <string name="taxes2" translatable="false">Ex: 0.02</string>
    <string name="calc">Calculate</string>
    <string name="ex3name">Savings</string>
    <string name="signMeaning">Q11 - What does this sign mean?</string>
    <string name="questionEleven">Question 11 from 28</string>
    <string name="bridgeAhead">Bridge Ahead</string>
    <string name="runwayNarrowing">Runway narrowing</string>
    <string name="sharpSlope">Sharp slope</string>
    <string name="vehicleWidth">Vehicle width reduction</string>
    <string name="nextQuestion">Next question</string>
    <string name="ex33name">Traffic Quiz</string>
    <string name="totalConsumption">Total consupmtion USD $:</string>
    <string name="artist">Artistic cover charge USD $:</string>
    <string name="divide">Divide by:</string>
    <string name="calculateFinal">calculate final bill</string>
    <string name="serviceTax">Service Tax(10%) USD:</string>
    <string name="totalBill">Total Bill USD:</string>
    <string name="valuePerPerson">Value per person USD:</string>
</resources>
