<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex33Activity"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:text="@string/questionEleven"
    ></TextView>

    <ImageView
        android:layout_width="182dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:src="@drawable/quiz_transito_banner">

    </ImageView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/placa"
        android:layout_gravity="center">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/signMeaning"
        ></TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/bridgeAhead"
        android:background="@color/green"
        android:layout_marginBottom="5dp"
        ></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/runwayNarrowing"
        android:background="@color/green"
        android:layout_marginBottom="5dp"
        ></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/sharpSlope"
        android:background="@color/green"
        android:layout_marginBottom="5dp"
        ></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/vehicleWidth"
        android:background="@color/green"
        android:layout_marginBottom="5dp"
        ></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/nextQuestion"
        android:background="@color/grey"
        android:layout_marginBottom="5dp"
        ></Button>
</LinearLayout>