<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex34Activity"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="  BalaioDeLenha"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        ></TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:layout_marginHorizontal="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/totalConsumption"
                android:textSize="17dp"
                android:layout_gravity="center|left">
            </TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/artist"
                android:textSize="17dp"
                android:layout_gravity="center|left">
            </TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/divide"
                android:textSize="17dp"
                android:layout_gravity="left|center">
            </TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculateFinal"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="10dp"
            ></Button>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/serviceTax"
                android:textSize="17dp"
                android:layout_gravity="center|left">
            </TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:text="@string/totalBill"
                android:textSize="17dp"></TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:text="@string/valuePerPerson"
                android:textSize="17dp"></TextView>

            <EditText
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="                   ">

            </EditText>

        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_balaio"></ImageView>

    </TableLayout>

</LinearLayout>